# python-type-check

./: classes.py  pyproject.toml  test_pydantic_casting.py
examples/: main.py  nested_generics_instances.py
examples/pydantic/: rootmodels.py
